<resources>
    <string name="app_name">Toster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clock">00:00:00</string>
    <string name="tour">Турнир</string>
    <string name="menu">Меню</string>
    <string name="_2x2">2x2</string>
    <string name="_3x3">3x3</string>
    <string name="tour1">турнир</string>
</resources>