<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/con"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3E5FC"
    android:orientation="vertical"

    android:screenOrientation="landscape"
    tools:context=".tour.TourneerFirstFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageButton
            android:id="@+id/openMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/menu" />

        <TextView
            android:id="@+id/textViewCubeName"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tour"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/menuScroll"
        android:layout_width="216dp"
        android:layout_height="match_parent"
        android:layout_marginStart="-217dp"
        android:background="#00BCD4"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/menu"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/closeMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/close" />
            </TableRow>

            <Button
                android:id="@+id/cube_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#0097A7"
                android:text="@string/_2x2" />

            <Button
                android:id="@+id/cube_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#0097A7"
                android:text="@string/_3x3" />

            <Button
                android:id="@+id/tourneer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#0097A7"
                android:text="@string/tour1" />
        </LinearLayout>
    </ScrollView>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="281dp"
        android:layout_height="21dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="148dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/colChel1"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="количество человек:"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/colChel2"
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:layout_marginBottom="12dp"
        android:text="2"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintStart_toEndOf="@+id/colChel1" />

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="409dp"
        android:layout_height="509dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="1dp"
        android:background="#B3E5FC"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"></LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>